@@ -1,7 +1,7 @@
 /*
  * EmuTOS desktop
  *
- * Copyright (c) 2002, 2010 The EmuTOS development team
+ * Copyright (c) 2002-2014 The EmuTOS development team
  *
  * This file is distributed under the GPL, version 2 or at your
  * option any later version.  See doc/license.txt for details.
@@ -9,7 +9,7 @@
 
 
 /* Prototypes: */
-WORD act_chg(WORD wh, LONG tree, WORD root, WORD obj, GRECT *pc, UWORD chgvalue,
+WORD act_chg(WORD wh, OBJECT *tree, WORD root, WORD obj, GRECT *pc, UWORD chgvalue,
              WORD dochg, WORD dodraw, WORD chkdisabled);
 void act_allchg(WORD wh, LONG tree, WORD root, WORD ex_obj, GRECT *pt, GRECT *pc,
                 WORD chgvalue, WORD dochg, WORD dodraw);
